add gitignore, price, category component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jw-angular-pagination": "^1.1.0",
     "jw-paginate": "^1.0.4",
     "rxjs": "~6.4.0",
